fix: remove right margin on last tab causing overflow
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -276,7 +276,6 @@ body {
 
 .os9-tab:last-child {
   border-radius: 0 6px 0 0;
-  margin-right: -2px;
 }
 
 .os9-tab-active {
